--- a/code/index.html
+++ b/code/index.html
@@ -22,6 +22,10 @@
     globalConfig = {
         theme: "default"
     }
+
+    if(window.parent){
+        window.parent.postMessage({status:"completed"},"*");
+    }
 </script>
 </body>
 
