--- a/code/pages/landing.html
+++ b/code/pages/landing.html
@@ -1,4 +1,4 @@
-<psk-page title="PrivateSky Innovations">
+<psk-page title="Landing page">
     <psk-toc title="Table of contents"></psk-toc>
 
     <psk-chapter title="Swarm Communication Research">
