--- a/code/pages/profile.html
+++ b/code/pages/profile.html
@@ -1,5 +1,3 @@
 <psk-container>
-    <psk-ss-app app-name="profile-app">
-
-    </psk-ss-app>
+    <psk-ssapp app-name="profile-app"></psk-ssapp>
 </psk-container>
