--- a/code/pages/profile.html
+++ b/code/pages/profile.html
@@ -1,3 +1,3 @@
-<psk-container>
-    <psk-ssapp app-name="profile-app"></psk-ssapp>
+<psk-container controller-name="WalletSsappLauncher" data-app-name="profile-app">
+    <psk-ssapp key-ssi="@keySSI"></psk-ssapp>
 </psk-container>
