--- a/code/pages/profile.html
+++ b/code/pages/profile.html
@@ -1,3 +1,3 @@
-<psk-container controller-name="WalletSsappLauncher" data-app-name="profile-app">
-    <psk-ssapp key-ssi="@keySSI"></psk-ssapp>
+<psk-container controller-name="WalletSsappLauncher" data-app-name="profile-ssapp">
+    <psk-ssapp key-ssi="@keySSI" landing-path="/home"></psk-ssapp>
 </psk-container>
